Add MQTT support

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ py3deps =
 	python3-spidev
 	python3-numpy
 	python3-rpi.gpio
+	paho-mqtt
 commands =
 	printf "Setting up i2c and SPI..\n"
 	raspi-config nonint do_spi 0
